Styled main content elements

--- a/dashboard.html
+++ b/dashboard.html
@@ -47,13 +47,14 @@
         </div>
     </div>
 
-    <div class="search-content">
+    <section class="search-content">
         <div class="search-header">
             <form action="get">
                 <div class="search-box">
                     <div class="search-button">
                         <button type="submit">
                             <img src="" alt="">
+                            Search
                         </button>
                     </div>
                     <label for="search-query">
@@ -68,6 +69,7 @@
             </div>
         </div>
         <div class="main-content">
+            <h2 id="project-label">Projects</h2>
             <div class="container">
                 <p>Some filler text here</p>
             </div>
@@ -87,14 +89,16 @@
             <div class="container">
                 <p>Some filler text here</p>
             </div>
+
+            <h2 id="announcement-label">Announcements</h2>
             <div class="side-container" id="announcements">
-                <h2>Announcements</h2>
+
             </div>
+            <h2 id="trending-label">Trending</h2>
             <div class="side-container" id="trending">
-                <h2>Trending</h2>
             </div>
         </div>
-    </div>
+    </section>
 </body>
 
 </html>
