--- a/dashboard.html
+++ b/dashboard.html
@@ -50,26 +50,41 @@
     <section class="search-content">
         <div class="search-header">
             <form action="get">
-                <div class="search-box">
-                    <div class="search-button">
-                        <button type="submit">
-                            <img src="" alt="">
-                            Search
-                        </button>
-                    </div>
-                    <label for="search-query">
-                        <img src="" alt="">
-                    </label>
-                    <input type="text" name="search-query" id="search-query">
-                </div>
+                <button type="submit">
+                    <img src="" alt="">
+                    Search
+                </button>
+                <label for="search-query">
+                    <img src="" alt="">
+                </label>
+                <input type="text" name="search-query" id="search-query">
             </form>
+
+            <div class="avatar-big">
+                <img src="" alt="">
+            </div>
             <div class="greeting">
                 <strong>Hi there!</strong>
                 <!-- <h1>@MotorScript</h1> -->
             </div>
+            <div class="settings-icon">
+                <img class="notification-bell" src="" alt="">
+                <img src="" alt="">
+                <p>Username</p>
+            </div>
+
+            <button class="header-buttons" id="new-button" type="button">
+                New
+            </button>
+            <button class="header-buttons" id="upload-button" type="button">
+                Upload
+            </button>
+            <button class="header-buttons" id="share-button" type="button">
+                Share
+            </button>
         </div>
         <div class="main-content">
-            <h2 id="project-label">Projects</h2>
+            <p class="label" id="project-label">Projects</p>
             <div class="container">
                 <p>Some filler text here</p>
             </div>
@@ -90,11 +105,11 @@
                 <p>Some filler text here</p>
             </div>
 
-            <h2 id="announcement-label">Announcements</h2>
+            <p class="label" id="announcement-label">Announcements</p>
             <div class="side-container" id="announcements">
 
             </div>
-            <h2 id="trending-label">Trending</h2>
+            <p class="label" id="trending-label">Trending</p>
             <div class="side-container" id="trending">
             </div>
         </div>
