Began to add icons to project

--- a/dashboard.html
+++ b/dashboard.html
@@ -51,18 +51,14 @@
         <div class="search-header">
             <form action="get">
                 <button type="submit">
-                    <img src="" alt="">
-                    Search
+                    <img class="search-icon" src="magnify.svg" alt="Magnifying Glass">
                 </button>
-                <label for="search-query">
-                    <img src="" alt="">
-                </label>
                 <input type="text" name="search-query" id="search-query">
             </form>
 
-            <div class="avatar-big">
-                <img src="" alt="">
-            </div>
+
+            <img class="account-icon" src="account.svg" alt="Account Icon">
+
             <div class="greeting">
                 <strong>Hi there!</strong>
                 <!-- <h1>@MotorScript</h1> -->
