Added more icons to dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -120,17 +120,17 @@
                 Share
             </button>
         </div>
+    </section>
+
+    <section class="main-section">
         <div class="main-content">
-            <p class="label" id="project-label">Projects</p>
-            <div class="container">
-                <p>Some filler text here</p>
-            </div>
-
-            <div class="container">
-                <p>Some filler text here</p>
-            </div>
-            <div class="container">
-                <p>Some filler text here</p>
+            <div class="label" id="project-label">
+                <p>Projects</p>
+                <svg class="side-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <title>folder-multiple</title>
+                    <path
+                        d="M22,4H14L12,2H6A2,2 0 0,0 4,4V16A2,2 0 0,0 6,18H22A2,2 0 0,0 24,16V6A2,2 0 0,0 22,4M2,6H0V11H0V20A2,2 0 0,0 2,22H20V20H2V6Z" />
+                </svg>
             </div>
             <div class="container">
                 <p>Some filler text here</p>
@@ -141,12 +141,33 @@
             <div class="container">
                 <p>Some filler text here</p>
             </div>
-
-            <p class="label" id="announcement-label">Announcements</p>
+            <div class="container">
+                <p>Some filler text here</p>
+            </div>
+            <div class="container">
+                <p>Some filler text here</p>
+            </div>
+            <div class="container">
+                <p>Some filler text here</p>
+            </div>
+            <div class="label" id="announcement-label">
+                <p>Announcements</p>
+                <svg class="side-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <title>bullhorn</title>
+                    <path
+                        d="M12,8H4A2,2 0 0,0 2,10V14A2,2 0 0,0 4,16H5V20A1,1 0 0,0 6,21H8A1,1 0 0,0 9,20V16H12L17,20V4L12,8M21.5,12C21.5,13.71 20.54,15.26 19,16V8C20.53,8.75 21.5,10.3 21.5,12Z" />
+                </svg>
+            </div>
             <div class="side-container" id="announcements">
-
             </div>
-            <p class="label" id="trending-label">Trending</p>
+            <div class="label" id="trending-label">
+                <p>Trending</p>
+                <svg class="side-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <title>trending-up</title>
+                    <path
+                        d="M16,6L18.29,8.29L13.41,13.17L9.41,9.17L2,16.59L3.41,18L9.41,12L13.41,16L19.71,9.71L22,12V6H16Z" />
+                </svg>
+            </div>
             <div class="side-container" id="trending">
             </div>
         </div>
